<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Grid Client</string>
    <string name="dummy_content">This space is intentionally left empty.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user">user</string>
    <string name="API_KEY">d3b07384d113edec49eaa6238ad5ff00</string>
    <string name="lblAgent">Agent</string>
    <string name="lblLoginPinKey">Login with pin</string>
    <string name="LoginWIthKey">Login With key</string>
    <string name="lblLogout">Logout</string>
    <string name="userProfilePic">userProfilePicture</string>
    <string name="VERSION">0.0.0.BETA2_Bronze_Explorer</string>
    <string name="title_activity_post_upload">post_upload</string>
    <string name="yourpostisready">Your scan is done. Do you want to add some text?</string>
    <string name="sampleText">Fun day harrasing the portals</string>
    <string name="logout">Log out</string>
    <string name="critterID">549432d63cf56b9e0457cb4c</string>
    <string name="emailMeUpdateTxt">Email me update</string>
    <string name="txtWriteUpdateInfoBelow">\nWrite your update text in box below</string>
    <string name="txtUpdateWithText">Update with text</string>
    <string name="txtUpdateWithoutText">Update without text</string>
    <string name="txtUpdateSilently">Update silently</string>
    <string name="txtPosting">posting..</string>
    <string name="matchPatternUserName">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ012345789_-</string>
    <string name="matchPatternKeyAndPin">abcdefABCDEF012345789</string>

</resources>
