<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_material_light"
    android:orientation="vertical"
    android:padding="10dip">

    <TextView
        android:id="@+id/lblAgentName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:singleLine="true"
        android:text="@string/lblAgent"
        android:textColor="#000000" />

    <!-- Email input text -->
    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:inputType="text"
        android:textColor="#000000" />

    <!-- Password Label -->
    <TextView
        android:id="@+id/lblPinKey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:text="key/pin"
        android:textColor="#000000" />

    <!-- Password input text -->
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:inputType="text"
        android:password="false"
        android:singleLine="true"
        android:textColor="#000000" />

    <!-- Login button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"

        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/left"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"

            android:orientation="vertical">

            <Button
                android:id="@+id/btnLoginKey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/LoginWIthKey"
                android:onClick="loginWithKey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:orientation="vertical">

            <Button
                android:id="@+id/btnLoginPin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblLoginPinKey" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>